--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer-measure">
     <div class="footer-logo">
-      Company name
+      Andy Hart
     </div>
     <div class="footer-nav">
       <ul class="footer-list">
@@ -13,16 +13,11 @@
         </li>
         {% endfor %}
       </ul>
-      <ul class="footer-list">
-        <li><a href="https://www.facebook.com/">Facebook</a></li>
-        <li><a href="https://www.twitter.com/">Twitter</a></li>
-        <li><a href="https://instagram/">Instagram</a></li>
-      </ul>
     </div>
   </div>
   <div class="footer-measure">
     <div class="footer-copyright">
-      <p>&copy; {% year %} {{ meta.siteName }}</p>
+      <p>&copy; {% year %}</p>
     </div>
   </div>
 </footer>
