--- a/src/_includes/partials/hero.njk
+++ b/src/_includes/partials/hero.njk
@@ -1,6 +1,6 @@
 <div class="heading">
   <div class="heading-measure">
-    <h1 class="heading-title">{{ title }}</h1>
+    <h1 class="heading-title">Hello.<br>I'm <span class="headline-accent">{{ title }}</span>.</h1>
     <p class="heading-text">{{ summary }}</p>
   </div>
 </div>
