--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -1,16 +1,12 @@
 <header class="header">
   <div class="header-measure">
-    <div class="header-logo">
-      <a href="/">Company logo</a>
-    </div>
     <div class="header-nav">
       <nav class="nav">
         <ul>
         {% for item in navigation.items %}
         <li>
           <a href="{{ item.url }}" {{ helpers.getLinkActiveState(item.url, page.url) | safe }}
-            >{{ item.text }}</a
-          >
+            >{{ item.text }}</a>
         </li>
         {% endfor %}
         </ul>
