--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -610,8 +610,8 @@ figcaption {
  toggle-section {
    display: block;
    max-width: 620px;
-   border-top: 1px solid $primary-accent;
-   border-bottom: 1px solid $primary-accent;
+   border-top: 1px solid rgba(255,94,61,.25);
+   border-bottom: 1px solid rgba(255,94,61,.25);
  }
  .toggle-content {
    margin-top: 25px;
