updating link styles and footer

--- a/src/_includes/partials/portfoliolist.njk
+++ b/src/_includes/partials/portfoliolist.njk
@@ -7,6 +7,7 @@
   <h3 id="{{ portfolio.data.title }}">About the {{ portfolio.data.title }} project</h3>
   <div class="toggle-content">
  {{ portfolio.templateContent | safe }}
+ <p><a href="{{ portfolio.data.link }}">View the {{ portfolio.data.title }} site.</a></p>
   </div>
 </toggle-section>
 </div>
