changing footer color

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -428,7 +428,7 @@ figcaption {
   }
 }
 .footer {
-  background-color: #edf2f7;
+  background-color: #edeeef;
   padding-top: 25px;
   padding-bottom: 25px;
 }
