updating meta tags

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,22 +1,13 @@
+---
+pageTitle: Andy Hart
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/manifest.webmanifest">
-
-  <title>{{ title }}{% if page.url != '/' %} | {{ meta.siteName }}{% endif %}</title>
-  <link rel="stylesheet" href="https://use.typekit.net/oks3fwq.css">
-  <link rel="stylesheet" href="{{ '/css/styles.css' | url }}">
+{% include "partials/meta-info.njk" %}
 </head>
 <body>
 {% include "partials/nav.njk" %}
-{% include "partials/hero.njk" %}
 
 {{ content | safe }}
 
