--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -1,11 +1,13 @@
 ---
 layout: base.njk
 ---
+{% include "partials/hero.njk" %}
 <main>
   <article>
     <div class="content">
       <div class="content-measure">
         <div class="content-indent">
+        <h1>{{ title }}<h1>
         {{ content | safe }}
         </div>
       </div>
