updating heading structures

--- a/src/_includes/partials/hero.njk
+++ b/src/_includes/partials/hero.njk
@@ -1,6 +1,6 @@
 <div class="heading">
   <div class="heading-measure">
-    <h1 class="heading-title">Hello.<br>I'm <span class="headline-accent">Andy Hart</span>.</h1>
+    <p class="heading-title">Hello.<br>I'm <span class="headline-accent">Andy Hart</span>.</p>
     <p class="heading-text">I'm a UX Engineer from Minneapolis, MN with a background in designing technical solutions for government, non-profit, and advocacy-based organizations.</p>
   </div>
 </div>
