--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -7,7 +7,7 @@ layout: base.njk
     <div class="content">
       <div class="content-measure">
         <div class="content-indent">
-        <h1>{{ title }}<h1>
+        <h1 class="page-heading">{{ title }}</h1>
         {{ content | safe }}
         </div>
       </div>
