--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -22,49 +22,6 @@ body {
   font-size: 100%;
   color: $primary-dark;
 }
-table {
-  max-width: 620px;
-  border-collapse: collapse;
-  table-layout: fixed;
-  margin-bottom: 25px;
-}
-@media (min-width: 37.5em) {
-  table {
-    margin-bottom: 35px;
-  }
-}
-table th,
-table td {
-  border-bottom: 1px solid #788b9b;
-  vertical-align: top;
-  text-align: left;
-  font-size: 1.125rem;
-  line-height: 1.875rem;
-  padding: 10px;
-}
-@media (min-width: 37.5em) {
-  table th,
-  table td {
-    font-size: 1.375rem;
-    line-height: 2.1875rem;
-  }
-}
-hr {
-  border: 1px solid #788b9b;
-  border-top: 0;
-  margin-bottom: 30px;
-}
-@media (min-width: 37.5em) {
-  hr {
-    font-size: 1.375rem;
-    margin-bottom: 45px;
-  }
-}
-@media (min-width: 64em) {
-  hr {
-    max-width: 620px;
-  }
-}
 a:link,
 a:visited {
   color: #1d70b8;
@@ -168,7 +125,8 @@ main {
     padding-left: 120px;
   }
 }
-.content h2 {
+h2.page-heading,
+h1.page-heading {
   font-size: 1.875rem;
   line-height: 2.1875rem;
   font-weight: 800;
@@ -177,16 +135,19 @@ main {
   max-width: 620px;
 }
 @media (min-width: 37.5em) {
-  .content h2 {
+  h2.page-heading,
+  h1.page-heading {
     font-size: 2.8125rem;
     line-height: 3.125rem;
     margin-top: 75px;
   }
 }
-.content h2:first-child {
+h2.page-heading:first-child,
+h1.page-heading:first-child {
   margin-top: 0;
 }
-.content h2:after {
+h2.page-heading:after,
+h1.page-heading:after {
   content: "";
   display: block;
   width: 48px; 
@@ -194,20 +155,23 @@ main {
   border-bottom: 10px solid $primary-dark;
   margin-bottom: 48px;
 }
-.content h3 {
+.content h3,
+h2.project-title {
   font-size: 1.1875rem;
   line-height: 1.5625rem;
   margin-bottom: 5px;
   max-width: 620px;
 }
 @media (min-width: 37.5em) {
-  .content h3 {
+  .content h3,
+  h2.project-title {
     font-size: 1.4375rem;
     line-height: 2.1875rem;
     margin-bottom: 10px;
   }
 }
-.content h3:first-child {
+.content h3:first-child
+h2.project-title:first-child {
   margin-top: 0;
 }
 .content h3 + .image {
@@ -471,6 +435,7 @@ figcaption {
 }
 .footer-list {
   font-size: 16px;
+  font-weight: 500;
   line-height: 25px;
   list-style: none;
   margin-bottom: 25px;
