--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer-measure">
     <div class="footer-logo">
-      Andy Hart
+    <img src="/images/ah-logo-shadow.svg" width="72">
     </div>
     <div class="footer-nav">
       <ul class="footer-list">
@@ -13,11 +13,6 @@
         </li>
         {% endfor %}
       </ul>
-    </div>
-  </div>
-  <div class="footer-measure">
-    <div class="footer-copyright">
-      <p>&copy; {% year %}</p>
     </div>
   </div>
 </footer>
