fixing minor performance issue

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer-measure">
     <div class="footer-logo">
-    <img src="/images/ah-logo-shadow.svg" width="72" alt="logo for Andy Hart">
+    <img src="/images/ah-logo-shadow.svg" width="72" height="47" alt="logo for Andy Hart">
     </div>
     <div class="footer-nav">
       <ul class="footer-list">
