adding list styles

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -231,6 +231,9 @@ h2.project-title:first-child {
   margin-left: 25px;
   margin-bottom: 15px;
 }
+.content ul.list-compact li {
+  margin-bottom: 8px;
+}
 p.text-strong {
   font-weight: 700; 
   line-height: 2;
