--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -4,7 +4,8 @@ layout: base.njk
 <div class="heading">
   <div class="heading-measure">
     <h1 class="heading-title">Hello.<br>I'm <span class="headline-accent">Andy Hart</span>.</h1>
-    <p class="heading-text">I'm a UX Engineer from Minneapolis, MN with a background in designing technical solutions for government, non-profit, and advocacy-based organizations.</p>
+    {# <p class="heading-text">I'm a UX Engineer from Minneapolis, MN with a background in designing technical solutions for government, non-profit, and advocacy-based organizations.</p> #} 
+    <p class="heading-text">Combining people skills, technical knowledge, adaptability, and a mission-driven attitude to find fair, successful solutions to challenges for government, non-profit, and advocacy-based organizations.</p>
   </div>
 </div>
 <main>
