--- a/src/_includes/partials/hero.njk
+++ b/src/_includes/partials/hero.njk
@@ -1,6 +1,7 @@
 <div class="heading">
   <div class="heading-measure">
     <p class="heading-title">Hello.<br>I'm <span class="headline-accent">Andy Hart</span>.</p>
-    <p class="heading-text">I'm a UX Engineer from Minneapolis, MN with a background in designing technical solutions for government, non-profit, and advocacy-based organizations.</p>
+    {#<p class="heading-text">I'm a UX Engineer from Minneapolis, MN with a background in designing technical solutions for government, non-profit, and advocacy-based organizations.</p>#}
+    <p class="heading-text">Combining people skills, technical knowledge, adaptability, and a mission-driven attitude to find fair, successful solutions to challenges for government, non-profit, and advocacy-based organizations.</p>
   </div>
 </div>
