updating communications experience and skills

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -197,7 +197,7 @@ h2.project-title:first-child {
   }
 }
 .content p {
-  max-width: 620px;
+  //max-width: 620px;
   font-size: 1.125rem;
   font-weight: 500;
   line-height: 1.875rem;
